--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "node build/dev-server.js",
     "build": "node build/build.js",
-    "lint": "eslint --ext .js,.vue src",
+    "lint": "./node_modules/eslint/bin/eslint.js --ext .js,.vue src",
     "update-data": "node build/update-data.js"
   },
   "dependencies": {
