--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "scripts": {
     "dev": "node build/dev-server.js",
-    "build": "npm run update-data && node build/build.js",
+    "build": "npm run update && node build/build.js",
     "lint": "./node_modules/eslint/bin/eslint.js --ext .js,.vue src",
     "update": "node build/update-data.js && node build/update-images.js",
     "update-data": "node build/update-data.js",
