--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "deploy": "npm run build && firebase deploy"
   },
   "dependencies": {
+    "bulma": "^0.6.1",
+    "font-awesome": "^4.7.0",
     "vue": "^2.1.10"
   },
   "devDependencies": {
@@ -45,10 +47,12 @@
     "function-bind": "^1.1.0",
     "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.17.3",
+    "node-sass": "^4.6.1",
     "opn": "^4.0.2",
     "optimize-css-assets-webpack-plugin": "^1.3.0",
     "ora": "^1.1.0",
     "rimraf": "^2.6.0",
+    "sass-loader": "^6.0.6",
     "semver": "^5.3.0",
     "url-loader": "^0.5.7",
     "vue-loader": "^11.0.0",
