--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "update": "node update.js",
+    "update": "node src/update-data.js && node src/update-images.js",
     "postinstall": "npm run update",
-    "prepublish": "npm run update && npm run build",
-    "publish": "firebase deploy"
+    "predeploy": "npm run update && npm run build",
+    "deploy": "firebase deploy"
   },
   "dependencies": {
     "bulma": "^0.7.5",
@@ -21,6 +21,7 @@
     "@vue/cli-plugin-babel": "^3.8.0",
     "@vue/cli-plugin-eslint": "^3.8.0",
     "@vue/cli-service": "^3.8.0",
+    "axios": "^0.19.0",
     "babel-eslint": "^10.0.1",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
