Apply vue eslint rules and fix linter errors

--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
       "node": true
     },
     "extends": [
-      "plugin:vue/essential",
-      "eslint:recommended"
+      "eslint:recommended",
+      "plugin:vue/recommended"
     ],
     "rules": {},
     "parserOptions": {
